--- a/Pipfile
+++ b/Pipfile
@@ -17,8 +17,13 @@ flask = "*"
 sqlalchemy = "*"
 flask-table = "*"
 black = "*"
+isort = "*"
+flake8 = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
